[metadata]
name = openplantbook
version = 0.0.2
description = OpenPlantbook provides access to the OpenPlantbook API
url = https://github.com/Olen/python-openplantbook
project-urls =
    Documentation = https://open.plantbook.io/
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM



[options]
packages = openplantbook
install_requires = aiohttp

[files]
packages = openplantbook
