[metadata]
name = pyopenplantbook
version = 0.0.3
description = OpenPlantbook provides access to the OpenPlantbook API
url = https://github.com/Olen/python-openplantbook
project-urls =
    Documentation = https://open.plantbook.io/
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM



[options]
packages = pyopenplantbook
install_requires = aiohttp

[files]
packages = pyopenplantbook
